ACTIN-124: Clean up clinical feed ingestion (#65)
Rename TSVs to direct translations of provided file names.
Rename EncounterEntry to SurgeryEntry and add DigitalFileEntry.
Simplify questionnaire reading and extraction since these files are no longer mixed.
Refactor to reduce repetition and use streams.
Apply questionnaire correction mappings during extraction.