@@ -6,36 +6,29 @@ import java.util.Arrays;
 import java.util.List;
 
 import org.apache.logging.log4j.util.Strings;
-import org.jetbrains.annotations.NotNull;
 import org.junit.Test;
 
 public class QuestionnaireReaderTest {
 
     @Test
-    public void canReadQuestionnaire() {
+    public void shouldReadSimpleQuestionnaire() {
         String questionnaireText = "this: \n is: \n a: \n questionnaire:";
+        assertEquals(4, QuestionnaireReader.read(questionnaireText, Arrays.asList(questionnaireText.split(": \n "))).length);
+    }
 
-        assertEquals(4, QuestionnaireReader.read(entry(questionnaireText), Arrays.asList(questionnaireText.split(": \n "))).length);
-
-        QuestionnaireEntry entryToClean = entry(QuestionnaireReader.TERMS_TO_CLEAN.iterator().next() + "\n test:");
-
-        String[] lines = QuestionnaireReader.read(entryToClean, List.of("test"));
+    @Test
+    public void shouldCleanTermsFromQuestionnaire() {
+        String[] lines = QuestionnaireReader.read(String.join("", QuestionnaireReader.TERMS_TO_CLEAN) + "\n test:", List.of("test"));
         assertEquals(2, lines.length);
         assertEquals(Strings.EMPTY, lines[0]);
+    }
 
-        QuestionnaireEntry entryToMerge = entry("value1: x\nand y\nand more\nvalue2: z\n\nheader\nvalue3: 5\nvalue4: 6\n7");
-
-        lines = QuestionnaireReader.read(entryToMerge, List.of("value"));
+    @Test
+    public void shouldMergeLinesForMultilineResponses() {
+        String[] lines =
+                QuestionnaireReader.read("value1: x\nand y\nand more\nvalue2: z\n\nheader\nvalue3: 5\nvalue4: 6\n7", List.of("value"));
         assertEquals(6, lines.length);
         assertEquals("value1: x,and y,and more", lines[0]);
         assertEquals("value4: 6,7", lines[5]);
-    }
-
-    @NotNull
-    private static QuestionnaireEntry entry(@NotNull String questionnaire) {
-        return ImmutableQuestionnaireEntry.builder()
-                .from(TestQuestionnaireFactory.createTestQuestionnaireEntry())
-                .itemAnswerValueValueString(questionnaire)
-                .build();
     }
 }
